--- a/src/component/grid.css
+++ b/src/component/grid.css
@@ -1,37 +1,29 @@
 .grid-table-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
   }
-  
-  @media (min-width: 768px) {
-    .grid-table-container {
-      grid-template-columns: repeat(3, 1fr);
-    }
-  }
-  
-  @media (min-width: 992px) {
-    .grid-table-container {
-      grid-template-columns: 1fr;
-    }
-  }
-  
-  @media (min-width: 1200px) {
-    .grid-table-container {
-      grid-template-columns: repeat(2);
-    }
-  }
-  
+
 .card-weather-t,
 .card-weather-5-days {
-  width: 32rem;
+  width: max(30rem,35%);
+  margin :0 1rem;
   height: 20rem;
 }
-
+.card-weather-t,.card-weather-hourly,.card-weather-5-days  ,.card-weather-detail{
+  margin-bottom: 1rem;
+}
 .card-weather-detail,
 .card-weather-hourly {
-  width: 50rem;
+  width: max(30rem,60%);
+  margin :0 1rem;
   height: 20rem;
   
+}
+.card-weather-hourly-container{
+  overflow: scroll;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 .card-weather-detail {
   display: flex;
@@ -59,7 +51,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0 1rem;
   height: 100%; }
+.hourly-card:nth-child(1){
+  margin-right: 1rem;
+  margin-left: 0;
+}
+.hourly-card:last-child{
+  margin-right: 0z;
+  margin-left: 1rem;
+}
 
 .GeiLocation-button:hover{background-color: #3c9612 !important;
 }
