--- a/src/component/MapPage.css
+++ b/src/component/MapPage.css
@@ -1,20 +1,20 @@
 .map-page-container {
   display: flex;
   border-radius: 20rem;
+  width: 100%;
 }
 
 .grid-map-table-container {
-  flex: 1;
-  margin-right: 2rem;
+  position: absolute;
+  z-index: 1;
 }
 
 .map-component-container {
   flex: 1;
-  
+  position: relative;
 }
 
 .map-wrapper {
-  width: 40rem;
-  height: 40rem;
-  
+  width: 100%;
+  height: 85vh; 
 }
