--- a/src/component/grid.css
+++ b/src/component/grid.css
@@ -1,66 +1,245 @@
 .grid-table-container {
     display: grid;
     width: 100%;
+    overflow: hidden;
   }
 
 .card-weather-t,
 .card-weather-5-days {
-  width: max(30rem,35%);
+  width: max(26rem,35%);
   margin :0 1rem;
   height: 20rem;
+}
+
+
+.card-weather-5-days-row {
+  justify-content: center;
+}
+
+.card-weather-5-days-icon {
+  max-width: 100%;
+  height: auto;
+}
+
+.card-weather-5-days-temperature {
+  text-align: center;
+  font-size: 24px;
+  font-weight: 600;
+  word-wrap: break-word;
+}
+
+.card-weather-5-days-day {
+  font-size: 16px;
+  font-weight: 400;
+  word-wrap: break-word;
+}
+.dayOfFiveSome{
+  text-align: center;
+  font-size: 0.9rem;
+  font-weight: 600; 
+  word-wrap: break-word;
+} 
+.card-weather-detail-container{
+  justify-content: space-between;
 }
 .card-weather-t,.card-weather-hourly,.card-weather-5-days  ,.card-weather-detail{
-  margin-bottom: 1rem;
+  margin-bottom: 0.1rem;
 }
+
+.city-name, .time, .date {
+  position: absolute;
+}
+
+.city-name {
+  font-size: 36px;
+  font-weight: 700;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.time {
+  font-size: 80px;
+  font-weight: 700;
+  top: 65%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.date {
+  font-size: 20px;
+  font-weight: 400;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .card-weather-detail,
 .card-weather-hourly {
-  width: max(30rem,60%);
-  margin :0 1rem;
+  width: max(26rem,60%);
   height: 20rem;
   
+}
+.time-weather-complain{
+  display: flex;
+  width: 56%;
+}
+.detail-card-temp{
+  width: 56%;
+  border: 0;
+}
+.detail-card-weather{
+  width: 39%;
+  border: 0;
+}
+.detail-card-param{
+  border: 0;
+  width: 44%; 
+}
+.temperature-label{
+  font-size: 1.2vw;
+}
+@media (max-width: 1010px) {
+    .detail-card-column{
+      height: 50%;
+      margin: 0;
+    }
+    .time-weather-complain{
+      flex-direction: column;
+      flex-grow: 0;
+      width: unset;
+      margin-left: 2rem;
+    }
+    .weather-description > div{
+      display: none;
+       }
+  
+
+    .detail-card-param{ 
+      width: fit-content;
+      height: fit-content;
+    }
+    .detail-card-temperature-small{
+      font-size: 22px !important;
+    }
+    .detail-card-temperature{
+      height: 4rem !important;
+      font-size: 50px !important;
+    }
+    .detail-content {
+      width: 6rem !important;
+      height: 8rem !important;
+    }
+}
+.card-weather-detail > .ant-card-body{
+  width: 100%;
+}
+.detail-card-param > .ant-card-body,
+.detail-card-temp > .ant-card-body,
+.detail-card-weather > .ant-card-body{
+  margin: 0;
+  padding: 0;
+}
+.detail-card-content {
+  font-weight: 600;
+  word-wrap: break-word;
+}
+.detail-card > .ant-card-body,
+.detail-card{
+  display: flex;
+  place-content: center;
+}
+
+
+.detail-card-temperature {
+  font-size: 5em;
+  height: 6rem
+}
+
+.detail-card-temperature-small {
+  font-size: 2.2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.detail-card-description {
+  font-size: 1.69vw;
+  text-align: center;
+}
+.card-weather-hourly{
+  margin-bottom: 1rem;
 }
 .card-weather-hourly-container{
   overflow: scroll;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .card-weather-detail {
   display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.group-flex {
+  margin: 0;
+  padding: 0;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between; 
+  flex-direction: row;
+  place-content: center;
 }
-
-.group {
-  display: flex;
-  flex-direction: column;
+.card-title {
+  font-size: 32px;
 }
-.group-card {
-  display: inline-block;
-  margin-right: 1rem;
-  text-align: center;
-}
-
-
 .hourly-card {
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 0 1rem;
   height: 100%; }
-.hourly-card:nth-child(1){
-  margin-right: 1rem;
-  margin-left: 0;
-}
-.hourly-card:last-child{
-  margin-right: 0z;
-  margin-left: 1rem;
+
+  .hourly-card-content {
+    font-weight: 700;
+    word-wrap: break-word;
+  }
+  
+  .hourly-card-content-time {
+    font-size: 24px;
+  }
+  
+  .hourly-card-content-temperature {
+    font-size: 20px;
+  }
+  
+  .hourly-card-content-wind {
+    font-size: 20px;
+  }
+.card-weather-5-days > .ant-card-body {
+  height: 85%;
 }
 
-.GeiLocation-button:hover{background-color: #3c9612 !important;
+.sunrise-time, .sunset-time{
+  display: flex;
+  flex-direction: column;
+  width: 4rem;
 }
+.sunrise-content, .sunset-content{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.sunset-label, .sunset-time-text, .sunrise-label, .sunrise-time-text{
+  margin: 0;
+}
+.detail-content{
+  width: 7rem;
+  height: 6rem;
+}
+.detail-content *{
+  margin: 0;
+
+}
+.all-detail-content{
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+}
+.GeiLocation-button:hover{background-color: #3c9612 !important;
+}   
